update notebooks: refine langchain4j configuration, adjust execution metadata, and streamline content alignment across workflows

--- a/notebooks/agents/Prompt-Chaining Workflow.ipynb
+++ b/notebooks/agents/Prompt-Chaining Workflow.ipynb
@@ -40,15 +40,23 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-11T21:48:44.069877Z",
-     "start_time": "2025-05-11T21:48:43.106474Z"
+     "end_time": "2025-11-30T13:48:49.259877Z",
+     "start_time": "2025-11-30T13:48:48.611866Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_3_jupyter",
+      "Line_4_jupyter",
+      "Line_5_jupyter",
+      "Line_6_jupyter"
+     ]
     }
    },
    "cell_type": "code",
    "source": [
     "%useLatestDescriptors\n",
     "%use coroutines\n",
-    "%use langchain4j(1.0.0-beta3, anthropic)"
+    "%use langchain4j(model = anthropic)"
    ],
    "outputs": [],
    "execution_count": 1
@@ -61,8 +69,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T21:48:44.100358Z",
-     "start_time": "2025-05-11T21:48:44.073812Z"
+     "end_time": "2025-11-30T13:48:49.295090Z",
+     "start_time": "2025-11-30T13:48:49.260582Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_7_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -82,14 +95,19 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T21:48:49.867603Z",
-     "start_time": "2025-05-11T21:48:49.653724Z"
+     "end_time": "2025-11-30T13:48:49.530413Z",
+     "start_time": "2025-11-30T13:48:49.295646Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_8_jupyter"
+     ]
     }
    },
    "cell_type": "code",
    "source": [
-    "import dev.langchain4j.data.message.SystemMessage.systemMessage\n",
-    "import dev.langchain4j.data.message.UserMessage.userMessage\n",
+    "import dev.langchain4j.data.message.SystemMessage\n",
+    "import dev.langchain4j.data.message.UserMessage\n",
     "\n",
     "suspend fun llmCall(\n",
     "    prompt: String,\n",
@@ -104,10 +122,11 @@
     "        .build()\n",
     "\n",
     "    return withContext(Dispatchers.IO) {\n",
-    "        val response = client.chat {\n",
-    "            systemPrompt?.let { messages += systemMessage(it) }\n",
-    "            messages += userMessage(prompt)\n",
+    "        val messages = buildList {\n",
+    "            systemPrompt?.let { add(SystemMessage(it)) }\n",
+    "            add(UserMessage(prompt))\n",
     "        }\n",
+    "        val response = client.chat(messages)\n",
     "        response.aiMessage().text()\n",
     "    }\n",
     "}"
@@ -127,8 +146,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T21:48:51.193436Z",
-     "start_time": "2025-05-11T21:48:51.107695Z"
+     "end_time": "2025-11-30T13:48:49.661604Z",
+     "start_time": "2025-11-30T13:48:49.533742Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_9_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -165,8 +189,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T21:48:52.902515Z",
-     "start_time": "2025-05-11T21:48:52.879801Z"
+     "end_time": "2025-11-30T13:48:49.747609Z",
+     "start_time": "2025-11-30T13:48:49.666371Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_10_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -221,8 +250,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T21:48:54.455677Z",
-     "start_time": "2025-05-11T21:48:54.431018Z"
+     "end_time": "2025-11-30T13:48:49.807284Z",
+     "start_time": "2025-11-30T13:48:49.751656Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_11_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -251,8 +285,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T21:49:08.576050Z",
-     "start_time": "2025-05-11T21:48:57.097290Z"
+     "end_time": "2025-11-30T13:48:56.353802Z",
+     "start_time": "2025-11-30T13:48:49.816409Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_12_jupyter"
+     ]
     }
    },
    "cell_type": "code",
