--- a/notebooks/agents/Routing Workflow.ipynb
+++ b/notebooks/agents/Routing Workflow.ipynb
@@ -39,14 +39,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T21:49:56.626451Z",
-     "start_time": "2025-05-11T21:49:55.686026Z"
+     "end_time": "2025-11-30T13:24:38.348528Z",
+     "start_time": "2025-11-30T13:24:35.644470Z"
     }
    },
    "cell_type": "code",
    "source": [
     "%useLatestDescriptors\n",
-    "%use langchain4j(1.0.0-beta3)"
+    "%use langchain4j"
    ],
    "outputs": [],
    "execution_count": 1
@@ -59,8 +59,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T21:49:56.656261Z",
-     "start_time": "2025-05-11T21:49:56.630928Z"
+     "end_time": "2025-11-30T13:24:38.378576Z",
+     "start_time": "2025-11-30T13:24:38.349652Z"
     }
    },
    "cell_type": "code",
@@ -80,8 +80,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T21:49:57.504579Z",
-     "start_time": "2025-05-11T21:49:57.461393Z"
+     "end_time": "2025-11-30T13:24:38.425234Z",
+     "start_time": "2025-11-30T13:24:38.378943Z"
     }
    },
    "cell_type": "code",
@@ -107,8 +107,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T21:50:00.508006Z",
-     "start_time": "2025-05-11T21:50:00.322466Z"
+     "end_time": "2025-11-30T13:24:38.595581Z",
+     "start_time": "2025-11-30T13:24:38.425664Z"
     }
    },
    "cell_type": "code",
@@ -141,8 +141,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T21:51:04.273220Z",
-     "start_time": "2025-05-11T21:51:04.170776Z"
+     "end_time": "2025-11-30T13:24:38.807064Z",
+     "start_time": "2025-11-30T13:24:38.596010Z"
     }
    },
    "cell_type": "code",
@@ -218,7 +218,7 @@
     "}"
    ],
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -232,8 +232,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T21:51:05.865926Z",
-     "start_time": "2025-05-11T21:51:05.829507Z"
+     "end_time": "2025-11-30T13:24:38.861740Z",
+     "start_time": "2025-11-30T13:24:38.808078Z"
     }
    },
    "cell_type": "code",
@@ -285,7 +285,7 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -299,8 +299,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T21:51:07.143681Z",
-     "start_time": "2025-05-11T21:51:07.124116Z"
+     "end_time": "2025-11-30T13:24:38.891012Z",
+     "start_time": "2025-11-30T13:24:38.862137Z"
     }
    },
    "cell_type": "code",
@@ -332,7 +332,7 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -342,8 +342,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-11T21:51:42.001153Z",
-     "start_time": "2025-05-11T21:51:11.086610Z"
+     "end_time": "2025-11-30T13:25:11.997957Z",
+     "start_time": "2025-11-30T13:24:38.891424Z"
     }
    },
    "cell_type": "code",
@@ -378,41 +378,39 @@
       "----------------------------------------\n",
       "Available routes: [billing, technical, account, product]\n",
       "Routing Analysis:\n",
-      "The user is experiencing issues with logging into their account, specifically receiving an 'invalid password' error despite using what they believe is the correct password. This indicates a problem related to account access rather than billing, technical issues with the product itself, or inquiries about product features. Given the urgency expressed by the user, as they need to regain access to submit a report by the end of the day, the account support team is best suited to assist with this issue.\n",
+      "The user is experiencing issues accessing their account, specifically related to login credentials. The urgency of the situation is highlighted by the need to submit a report by the end of the day. Therefore, the most appropriate team to assist with account access issues is the account support team, as they specialize in resolving login and access problems.\n",
       "Selected route: account\n",
       "Account Support Response:\n",
       "\n",
       "Dear John,\n",
       "\n",
-      "Thank you for reaching out regarding your account access issue. We understand the urgency of your situation, and we are here to assist you in regaining access to your account. To prioritize your account security, please follow these steps:\n",
+      "Thank you for reaching out regarding your account access issue. I understand the urgency of your situation, and I am here to assist you in regaining access to your account while prioritizing your security.\n",
       "\n",
-      "1. **Verify Your Identity**: Before we proceed, we need to confirm your identity. Please provide the following information:\n",
-      "   - The email address associated with your account.\n",
-      "   - Any recent transactions or account activity that you can recall.\n",
-      "   - The last successful login date and time.\n",
+      "**Steps for Account Recovery:**\n",
       "\n",
-      "2. **Password Reset**: If you are confident that you are using the correct password, it may be beneficial to reset it. Please follow these steps:\n",
-      "   - Go to the login page and click on \"Forgot Password?\"\n",
-      "   - Enter your registered email address and follow the instructions sent to your email.\n",
-      "   - Create a new password that is strong and unique (at least 12 characters, including uppercase letters, lowercase letters, numbers, and special characters).\n",
+      "1. **Password Reset:**\n",
+      "   - Please initiate a password reset by clicking on the \"Forgot Password?\" link on the login page.\n",
+      "   - Enter your registered email address and follow the instructions sent to your inbox. Be sure to check your spam or junk folder if you do not see the email within a few minutes.\n",
       "\n",
-      "3. **Check for Account Lock**: If you have attempted to log in multiple times with an incorrect password, your account may be temporarily locked for security reasons. If this is the case, please wait 30 minutes before trying again or proceed with the password reset.\n",
+      "2. **Verify Your Identity:**\n",
+      "   - During the password reset process, you may be asked to answer security questions or verify your identity through a secondary method (e.g., SMS code, authentication app). Please ensure you have access to these verification methods.\n",
       "\n",
-      "4. **Enable Two-Factor Authentication (2FA)**: Once you regain access, we highly recommend enabling 2FA for added security. This will require a second form of verification when logging in, significantly enhancing your account's protection.\n",
+      "3. **Create a Strong Password:**\n",
+      "   - When creating a new password, ensure it is strong and unique. Use a combination of uppercase and lowercase letters, numbers, and special characters. Avoid using easily guessable information.\n",
       "\n",
-      "**Security Tips**:\n",
-      "- Avoid using the same password across multiple accounts.\n",
-      "- Regularly update your passwords and use a password manager if necessary.\n",
-      "- Be cautious of phishing attempts; always verify the source of any communication regarding your account.\n",
+      "**Security Tips:**\n",
+      "- Enable two-factor authentication (2FA) on your account if you haven't already. This adds an extra layer of security.\n",
+      "- Regularly update your passwords and avoid reusing them across different accounts.\n",
+      "- Be cautious of phishing attempts. Always verify the source of any emails or messages requesting your account information.\n",
       "\n",
-      "**Resolution Time**: Once we receive the required information, we aim to resolve your issue within 24 hours. However, if you choose to reset your password, you should be able to regain access immediately after completing the reset process.\n",
+      "**Resolution Time:**\n",
+      "Once you complete the password reset process, you should be able to access your account immediately. If you encounter any further issues, please respond to this message, and I will assist you further. \n",
       "\n",
-      "Please respond with the requested information at your earliest convenience so we can assist you further.\n",
+      "Thank you for your attention to these security measures. I look forward to your successful account recovery.\n",
       "\n",
-      "Best regards,\n",
-      "\n",
+      "Best regards,  \n",
       "[Your Name]  \n",
-      "Account Security Team\n",
+      "Account Security Specialist\n",
       "Ticket 2:\n",
       "----------------------------------------\n",
       "\n",
@@ -426,31 +424,31 @@
       "----------------------------------------\n",
       "Available routes: [billing, technical, account, product]\n",
       "Routing Analysis:\n",
-      "The ticket should be routed to the billing team because the user is inquiring about an unexpected charge on their credit card. The key terms here are 'unexpected charge' and 'adjust it if it's a mistake', indicating that Sarah is seeking clarification and potential correction regarding billing issues. This falls squarely within the responsibilities of the billing team, who handle charges and payment discrepancies.\n",
+      "The ticket should be routed to the billing team because the user is inquiring about an unexpected charge on their credit card. The key terms here are 'unexpected charge' and 'adjust it if it's a mistake', indicating that Sarah is seeking clarification and potential correction regarding her billing. This falls squarely within the responsibilities of the billing team, which handles charges and payment issues.\n",
       "Selected route: billing\n",
       "Billing Support Response:\n",
       "\n",
       "Hello Sarah,\n",
       "\n",
-      "Thank you for reaching out regarding the unexpected charge of $49.99 on your credit card. I understand how concerning this can be, especially when you were expecting to be billed at the $29.99 plan.\n",
+      "Thank you for reaching out regarding the unexpected charge of $49.99 on your credit card. I understand how concerning this can be, and I'm here to help clarify the situation.\n",
       "\n",
-      "Upon reviewing your account, it appears that the charge of $49.99 corresponds to an upgrade to a premium service that was activated recently. This may have been done inadvertently or through a misunderstanding of the plan options. I apologize for any confusion this may have caused.\n",
+      "The charge of $49.99 may be due to an upgrade to a higher-tier plan or an additional service that was added to your account. I will need to review your account details to confirm the reason for this discrepancy.\n",
       "\n",
-      "To resolve this issue, I recommend the following steps:\n",
+      "Here are the next steps we will take:\n",
       "\n",
-      "1. **Confirm Your Current Plan**: Please verify if you intended to upgrade to the premium service. If not, we can revert your account back to the $29.99 plan.\n",
-      "2. **Adjustment of Charges**: If you confirm that you did not intend to upgrade, I will initiate a refund for the $49.99 charge. This process typically takes 3-5 business days to reflect on your account.\n",
-      "3. **Future Billing**: Once the adjustment is made, you will be billed $29.99 for your next billing cycle.\n",
+      "1. **Account Review**: I will check your account to verify your current plan and any recent changes. This process typically takes 1-2 business days.\n",
+      "2. **Follow-Up**: Once I have the information, I will follow up with you via email to explain the charge and discuss any necessary adjustments.\n",
+      "3. **Adjustment**: If the charge is indeed a mistake, I will initiate a refund for the difference, which can take 3-5 business days to process.\n",
       "\n",
-      "Please reply to this message confirming your intended plan, and I will take care of the rest promptly.\n",
+      "In the meantime, if you have any additional questions or need further assistance, please feel free to reach out. \n",
       "\n",
-      "For your convenience, we accept various payment options including credit/debit cards and PayPal for future transactions.\n",
+      "For your convenience, we accept various payment options, including credit/debit cards and PayPal, should you need to make any future payments.\n",
       "\n",
-      "Thank you for your understanding, and I look forward to resolving this for you!\n",
+      "Thank you for your patience, and I look forward to resolving this for you!\n",
       "\n",
       "Best regards,  \n",
       "[Your Name]  \n",
-      "Billing Support Specialist\n",
+      "Billing Support Team\n",
       "Ticket 3:\n",
       "----------------------------------------\n",
       "\n",
@@ -464,46 +462,51 @@
       "----------------------------------------\n",
       "Available routes: [billing, technical, account, product]\n",
       "Routing Analysis:\n",
-      "The user's request is focused on exporting project data to Excel, which pertains to the functionality of the product itself. The user is seeking guidance on how to perform a specific action within the product, indicating that they need assistance with the product's features rather than billing, account management, or technical issues. Therefore, the product team is best suited to provide the necessary support and instructions for exporting data.\n",
+      "The user's request is focused on exporting project data, which relates to the functionality of the product. They are seeking guidance on how to perform a specific action within the product, indicating that they need assistance with the product's features rather than billing, account issues, or technical problems. Therefore, the product team is best suited to provide the necessary support and instructions for exporting data.\n",
       "Selected route: product\n",
       "Product Support Response:\n",
       "\n",
       "Hi Mike,\n",
       "\n",
-      "Thank you for reaching out! I’m happy to help you with exporting your project data to Excel. Yes, it is indeed possible to perform a bulk export, and I’ll walk you through the steps to make it as smooth as possible.\n",
+      "Thank you for reaching out! I'm happy to help you with exporting your project data to Excel. Yes, it is indeed possible to perform a bulk export, and I’ll walk you through the steps to make this process smooth for you.\n",
       "\n",
       "### Steps to Export Data to Excel:\n",
       "\n",
       "1. **Navigate to Your Project**: Start by opening the project from which you want to export data.\n",
       "\n",
-      "2. **Access the Export Feature**: Look for the \"Export\" option, which is typically found in the project settings or under the \"More\" menu (represented by three dots or a gear icon).\n",
+      "2. **Access the Export Feature**: Look for the \"Export\" option, which is typically found in the project settings or under the \"More\" menu (often represented by three dots or a gear icon).\n",
       "\n",
-      "3. **Select Data Type**: You may have options to choose what type of data you want to export (e.g., tasks, milestones, or overall project data). Select the appropriate option based on your needs.\n",
+      "3. **Select Data Type**: Choose the type of data you want to export. This could include tasks, milestones, or other project-related information.\n",
       "\n",
-      "4. **Choose Excel Format**: When prompted, select the Excel format for your export. This is usually labeled as \".xlsx\" or \"Excel\".\n",
+      "4. **Choose Excel Format**: When prompted, select the Excel format (usually .xlsx) for your export.\n",
       "\n",
-      "5. **Initiate Export**: Click on the \"Export\" button. Depending on the size of your project, this may take a moment. Once completed, a download link will be provided.\n",
+      "5. **Initiate the Export**: Click on the \"Export\" button. Depending on the size of your project data, this may take a moment. Once completed, the file will either download automatically or prompt you to save it.\n",
       "\n",
-      "6. **Download the File**: Click the link to download your Excel file, and you can then open it in Excel for further analysis or reporting.\n",
+      "6. **Open in Excel**: After downloading, you can open the file in Excel to view and manipulate your data as needed.\n",
       "\n",
-      "### Example of Usage:\n",
-      "For instance, if you are managing a project with multiple tasks and team members, exporting this data can help you create a comprehensive report for stakeholders. You can analyze task completion rates, resource allocation, and timelines directly in Excel.\n",
+      "### Best Practices:\n",
       "\n",
-      "### Relevant Documentation:\n",
-      "For more detailed instructions, please refer to our [Exporting Data Documentation](#). This section provides additional insights and troubleshooting tips if you encounter any issues.\n",
+      "- **Filter Data Before Exporting**: If you only need specific information, consider applying filters to your project data before exporting. This will help you create a more focused and manageable Excel file.\n",
+      "\n",
+      "- **Regular Backups**: Make it a habit to export your project data regularly. This ensures you have up-to-date backups and can track changes over time.\n",
       "\n",
       "### Related Features:\n",
-      "You might also find the **Data Filtering** feature helpful before exporting. This allows you to narrow down the data to only what you need, making your Excel file more manageable. Additionally, consider using **Dashboards** to visualize your project data before exporting, which can provide a clearer picture of your project’s status.\n",
       "\n",
-      "If you have any further questions or need additional assistance, feel free to ask. Happy exporting!\n",
+      "- **Data Visualization**: Consider using built-in reporting tools to visualize your project data before exporting. This can provide insights that may be useful for your analysis.\n",
+      "\n",
+      "- **Integration with Other Tools**: If you frequently work with Excel, check if there are integrations available that can automate data syncing between your project management tool and Excel.\n",
+      "\n",
+      "For more detailed instructions, you can refer to the [Exporting Data Documentation](#) section, which provides additional insights and troubleshooting tips.\n",
+      "\n",
+      "If you have any further questions or need assistance with anything else, feel free to ask. Happy exporting!\n",
       "\n",
       "Best regards,  \n",
       "[Your Name]  \n",
-      "Product Support Team\n"
+      "Product Specialist\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 8
   },
   {
    "metadata": {},
