update notebooks: bump `kinference` to 0.2.27 and `ktor` to 3.3.3, refine metadata, and adjust cache handling logic

--- a/notebooks/kinference/KIGPT2.ipynb
+++ b/notebooks/kinference/KIGPT2.ipynb
@@ -5,13 +5,13 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:05:15.655111Z",
-     "start_time": "2025-02-10T13:05:15.193997Z"
+     "end_time": "2025-11-30T14:13:00.062506Z",
+     "start_time": "2025-11-30T14:12:59.729116Z"
     }
    },
    "source": [
-    "val kinferenceVersion = \"0.2.26\"\n",
-    "val ktorVersion = \"3.0.3\"\n",
+    "val kinferenceVersion = \"0.2.27\"\n",
+    "val ktorVersion = \"3.3.3\"\n",
     "\n",
     "USE {\n",
     "    repositories {\n",
@@ -42,8 +42,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:05:20.392581Z",
-     "start_time": "2025-02-10T13:05:20.320209Z"
+     "end_time": "2025-11-30T14:13:00.135323Z",
+     "start_time": "2025-11-30T14:13:00.063522Z"
     }
    },
    "cell_type": "code",
@@ -75,8 +75,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:05:28.271120Z",
-     "start_time": "2025-02-10T13:05:27.942767Z"
+     "end_time": "2025-11-30T14:13:00.541611Z",
+     "start_time": "2025-11-30T14:13:00.135922Z"
     }
    },
    "cell_type": "code",
@@ -170,8 +170,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:05:32.892098Z",
-     "start_time": "2025-02-10T13:05:32.865173Z"
+     "end_time": "2025-11-30T14:13:00.565149Z",
+     "start_time": "2025-11-30T14:13:00.542084Z"
     }
    },
    "cell_type": "code",
@@ -186,8 +186,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:05:38.083086Z",
-     "start_time": "2025-02-10T13:05:38.054141Z"
+     "end_time": "2025-11-30T14:13:00.589555Z",
+     "start_time": "2025-11-30T14:13:00.565572Z"
     }
    },
    "cell_type": "code",
@@ -201,8 +201,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:07:03.115746Z",
-     "start_time": "2025-02-10T13:05:49.181775Z"
+     "end_time": "2025-11-30T14:14:22.461856Z",
+     "start_time": "2025-11-30T14:13:00.589988Z"
     }
    },
    "cell_type": "code",
@@ -250,7 +250,7 @@
      "output_type": "stream",
      "text": [
       "Downloading model from: https://github.com/onnx/models/raw/main/validated/text/machine_comprehension/gpt-2/model/gpt2-lm-head-10.onnx\n",
-      "Predefined directory doesn't exist. Creating directory at /Users/pavel.gorgulov/Projects/Kotlin/Kotlin-AI-Examples/notebooks/kinference//.cache/.\n",
+      "File already exists at /Users/pavel.gorgulov/Projects/main_project/AI/Kotlin-AI-Examples/notebooks/kinference/.cache/gpt2-lm-head-10.onnx. Skipping download.\n",
       "Loading model...\n",
       "Here goes the test text for generation:\n",
       "Neurogenesis is most active during embryonic development and is responsible for producing all the various types of neurons of the organism, but it continues throughout adult life in a variety of organisms. Once born, neurons do not divide (see mitosis), and many will live the lifespan of the animal, except under extraordinary and usually pathogenic circumstances.\n",
@@ -261,7 +261,7 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 6
   }
  ],
  "metadata": {
