--- a/notebooks/kinference/ORTClassification.ipynb
+++ b/notebooks/kinference/ORTClassification.ipynb
@@ -5,15 +5,22 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:11:49.634012Z",
-     "start_time": "2025-02-10T13:11:49.034388Z"
+     "end_time": "2025-11-30T14:12:09.605811Z",
+     "start_time": "2025-11-30T14:12:05.317355Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_3_jupyter",
+      "Line_4_jupyter",
+      "Line_5_jupyter"
+     ]
     }
    },
    "source": [
     "%use kotlin-dl\n",
     "\n",
-    "val kinferenceVersion = \"0.2.26\"\n",
-    "val ktorVersion = \"3.0.3\"\n",
+    "val kinferenceVersion = \"0.2.27\"\n",
+    "val ktorVersion = \"3.3.3\"\n",
     "\n",
     "USE {\n",
     "    repositories {\n",
@@ -38,8 +45,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:11:51.657130Z",
-     "start_time": "2025-02-10T13:11:51.591525Z"
+     "end_time": "2025-11-30T14:12:09.661607Z",
+     "start_time": "2025-11-30T14:12:09.607087Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_6_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -75,8 +87,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:12:04.361732Z",
-     "start_time": "2025-02-10T13:12:04.112986Z"
+     "end_time": "2025-11-30T14:12:09.972083Z",
+     "start_time": "2025-11-30T14:12:09.662122Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_7_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -144,8 +161,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:12:11.084298Z",
-     "start_time": "2025-02-10T13:12:11.056438Z"
+     "end_time": "2025-11-30T14:12:10.019590Z",
+     "start_time": "2025-11-30T14:12:09.975375Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_8_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -160,8 +182,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:12:15.618890Z",
-     "start_time": "2025-02-10T13:12:15.028959Z"
+     "end_time": "2025-11-30T14:12:10.379416Z",
+     "start_time": "2025-11-30T14:12:10.020095Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_9_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -186,8 +213,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:12:21.225331Z",
-     "start_time": "2025-02-10T13:12:21.003035Z"
+     "end_time": "2025-11-30T14:12:10.647139Z",
+     "start_time": "2025-11-30T14:12:10.379849Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_10_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -233,8 +265,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:12:25.643303Z",
-     "start_time": "2025-02-10T13:12:25.515901Z"
+     "end_time": "2025-11-30T14:12:10.796711Z",
+     "start_time": "2025-11-30T14:12:10.648082Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_11_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -264,8 +301,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:12:31.362861Z",
-     "start_time": "2025-02-10T13:12:31.333284Z"
+     "end_time": "2025-11-30T14:12:10.821776Z",
+     "start_time": "2025-11-30T14:12:10.797424Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_12_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -280,8 +322,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:12:50.695940Z",
-     "start_time": "2025-02-10T13:12:37.789138Z"
+     "end_time": "2025-11-30T14:12:12.720288Z",
+     "start_time": "2025-11-30T14:12:10.822477Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_13_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -315,8 +362,9 @@
      "output_type": "stream",
      "text": [
       "Downloading model from: https://github.com/onnx/models/raw/main/validated/vision/classification/caffenet/model/caffenet-12.onnx\n",
-      "Predefined directory doesn't exist. Creating directory at /Users/pavel.gorgulov/Projects/Kotlin/Kotlin-AI-Examples/notebooks/kinference//.cache/.\n",
+      "File already exists at /Users/pavel.gorgulov/Projects/main_project/AI/Kotlin-AI-Examples/notebooks/kinference/.cache/CaffeNet.onnx. Skipping download.\n",
       "Downloading synset from: https://s3.amazonaws.com/onnx-model-zoo/synset.txt\n",
+      "File already exists at /Users/pavel.gorgulov/Projects/main_project/AI/Kotlin-AI-Examples/notebooks/kinference/.cache/synset.txt. Skipping download.\n",
       "Loading model...\n",
       "Creating inputs...\n",
       "Starting inference...\n",
