--- a/notebooks/kinference/ORTGPT2.ipynb
+++ b/notebooks/kinference/ORTGPT2.ipynb
@@ -5,13 +5,13 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:27:05.671253Z",
-     "start_time": "2025-02-10T13:27:05.206956Z"
+     "end_time": "2025-11-30T14:20:20.047550Z",
+     "start_time": "2025-11-30T14:20:15.878117Z"
     }
    },
    "source": [
-    "val kinferencerVersion = \"0.2.26\"\n",
-    "val ktorVersion = \"3.0.3\"\n",
+    "val kinferenceVersion = \"0.2.27\"\n",
+    "val ktorVersion = \"3.3.3\"\n",
     "\n",
     "USE {\n",
     "    repositories {\n",
@@ -20,11 +20,11 @@
     "        maven(\"https://packages.jetbrains.team/maven/p/grazi/grazie-platform-public\")\n",
     "    }\n",
     "    dependencies {\n",
-    "        implementation(\"io.kinference:inference-core-jvm:$kinferencerVersion\")\n",
-    "        implementation(\"io.kinference:inference-ort-jvm:$kinferencerVersion\")\n",
-    "        implementation(\"io.kinference:serializer-protobuf-jvm:$kinferencerVersion\")\n",
-    "        implementation(\"io.kinference:utils-common-jvm:$kinferencerVersion\")\n",
-    "        implementation(\"io.kinference:ndarray-core-jvm:$kinferencerVersion\")\n",
+    "        implementation(\"io.kinference:inference-core-jvm:$kinferenceVersion\")\n",
+    "        implementation(\"io.kinference:inference-ort-jvm:$kinferenceVersion\")\n",
+    "        implementation(\"io.kinference:serializer-protobuf-jvm:$kinferenceVersion\")\n",
+    "        implementation(\"io.kinference:utils-common-jvm:$kinferenceVersion\")\n",
+    "        implementation(\"io.kinference:ndarray-core-jvm:$kinferenceVersion\")\n",
     "\n",
     "        implementation(\"io.ktor:ktor-client-core-jvm:$ktorVersion\")\n",
     "        implementation(\"io.ktor:ktor-client-cio-jvm:$ktorVersion\")\n",
@@ -43,8 +43,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:27:05.732096Z",
-     "start_time": "2025-02-10T13:27:05.678435Z"
+     "end_time": "2025-11-30T14:20:20.102917Z",
+     "start_time": "2025-11-30T14:20:20.048645Z"
     }
    },
    "cell_type": "code",
@@ -79,8 +79,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:27:06.563564Z",
-     "start_time": "2025-02-10T13:27:06.070567Z"
+     "end_time": "2025-11-30T14:20:20.618856Z",
+     "start_time": "2025-11-30T14:20:20.103273Z"
     }
    },
    "cell_type": "code",
@@ -185,8 +185,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:27:06.737944Z",
-     "start_time": "2025-02-10T13:27:06.715791Z"
+     "end_time": "2025-11-30T14:20:20.652992Z",
+     "start_time": "2025-11-30T14:20:20.619392Z"
     }
    },
    "cell_type": "code",
@@ -201,8 +201,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:27:07.461104Z",
-     "start_time": "2025-02-10T13:27:07.440849Z"
+     "end_time": "2025-11-30T14:20:20.679822Z",
+     "start_time": "2025-11-30T14:20:20.654714Z"
     }
    },
    "cell_type": "code",
@@ -216,8 +216,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:27:38.180925Z",
-     "start_time": "2025-02-10T13:27:09.793527Z"
+     "end_time": "2025-11-30T14:20:27.481340Z",
+     "start_time": "2025-11-30T14:20:20.680306Z"
     }
    },
    "cell_type": "code",
@@ -265,6 +265,7 @@
      "output_type": "stream",
      "text": [
       "Downloading model from: https://github.com/onnx/models/raw/main/validated/text/machine_comprehension/gpt-2/model/gpt2-lm-head-10.onnx\n",
+      "File already exists at /Users/pavel.gorgulov/Projects/main_project/AI/Kotlin-AI-Examples/notebooks/kinference/.cache/gpt2-lm-head-10.onnx. Skipping download.\n",
       "Loading model...\n",
       "Here goes the test text for generation:\n",
       "Neurogenesis is most active during embryonic development and is responsible for producing all the various types of neurons of the organism, but it continues throughout adult life in a variety of organisms. Once born, neurons do not divide (see mitosis), and many will live the lifespan of the animal, except under extraordinary and usually pathogenic circumstances.\n",
