--- a/notebooks/kinference/KIClassification.ipynb
+++ b/notebooks/kinference/KIClassification.ipynb
@@ -5,15 +5,22 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:00:12.108015Z",
-     "start_time": "2025-02-10T13:00:11.530587Z"
+     "end_time": "2025-11-30T14:10:40.342805Z",
+     "start_time": "2025-11-30T14:10:33.108236Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_3_jupyter",
+      "Line_4_jupyter",
+      "Line_5_jupyter"
+     ]
     }
    },
    "source": [
     "%use kotlin-dl\n",
     "\n",
-    "val kinferenceVersion = \"0.2.26\"\n",
-    "val ktorVersion = \"3.0.3\"\n",
+    "val kinferenceVersion = \"0.2.27\"\n",
+    "val ktorVersion = \"3.3.3\"\n",
     "\n",
     "USE {\n",
     "    repositories {\n",
@@ -39,8 +46,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:00:12.347215Z",
-     "start_time": "2025-02-10T13:00:12.295281Z"
+     "end_time": "2025-11-30T14:10:40.394384Z",
+     "start_time": "2025-11-30T14:10:40.344734Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_6_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -76,8 +88,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:00:34.395122Z",
-     "start_time": "2025-02-10T13:00:34.137897Z"
+     "end_time": "2025-11-30T14:10:40.671158Z",
+     "start_time": "2025-11-30T14:10:40.398352Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_7_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -144,8 +161,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:00:42.121114Z",
-     "start_time": "2025-02-10T13:00:42.095847Z"
+     "end_time": "2025-11-30T14:10:40.710096Z",
+     "start_time": "2025-11-30T14:10:40.672181Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_8_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -160,8 +182,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:00:48.526585Z",
-     "start_time": "2025-02-10T13:00:48.451536Z"
+     "end_time": "2025-11-30T14:10:40.833103Z",
+     "start_time": "2025-11-30T14:10:40.711316Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_9_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -183,8 +210,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:00:53.440965Z",
-     "start_time": "2025-02-10T13:00:52.959882Z"
+     "end_time": "2025-11-30T14:10:41.338242Z",
+     "start_time": "2025-11-30T14:10:40.833958Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_10_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -198,8 +230,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:00:58.001898Z",
-     "start_time": "2025-02-10T13:00:57.796134Z"
+     "end_time": "2025-11-30T14:10:41.694368Z",
+     "start_time": "2025-11-30T14:10:41.339067Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_11_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -245,8 +282,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:01:04.122663Z",
-     "start_time": "2025-02-10T13:01:04.003458Z"
+     "end_time": "2025-11-30T14:10:41.922928Z",
+     "start_time": "2025-11-30T14:10:41.695266Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_12_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -276,8 +318,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:01:20.419350Z",
-     "start_time": "2025-02-10T13:01:20.390133Z"
+     "end_time": "2025-11-30T14:10:41.987595Z",
+     "start_time": "2025-11-30T14:10:41.926778Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_13_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -292,8 +339,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T13:02:55.575404Z",
-     "start_time": "2025-02-10T13:02:41.686551Z"
+     "end_time": "2025-11-30T14:11:04.065051Z",
+     "start_time": "2025-11-30T14:10:41.989196Z"
+    },
+    "executionRelatedData": {
+     "compiledClasses": [
+      "Line_14_jupyter"
+     ]
     }
    },
    "cell_type": "code",
@@ -327,9 +379,8 @@
      "output_type": "stream",
      "text": [
       "Downloading model from: https://github.com/onnx/models/raw/main/validated/vision/classification/caffenet/model/caffenet-12.onnx\n",
-      "File already exists at /Users/pavel.gorgulov/Projects/Kotlin/Kotlin-AI-Examples/notebooks/kinference/.cache/CaffeNet.onnx. Skipping download.\n",
+      "Predefined directory doesn't exist. Creating directory at /Users/pavel.gorgulov/Projects/main_project/AI/Kotlin-AI-Examples/notebooks/kinference//.cache/.\n",
       "Downloading synset from: https://s3.amazonaws.com/onnx-model-zoo/synset.txt\n",
-      "File already exists at /Users/pavel.gorgulov/Projects/Kotlin/Kotlin-AI-Examples/notebooks/kinference/.cache/synset.txt. Skipping download.\n",
       "Loading model...\n",
       "Creating inputs...\n",
       "Starting inference...\n",
@@ -1136,7 +1187,7 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 10
   }
  ],
  "metadata": {
